# rust-bank

./: .gitignore  Cargo.toml  coverage.sh
src/: command_line.rs  database.rs  luhn.rs  main.rs  menu.rs
src/database/: json.rs  sqlite.rs
src/menu/: close_app.rs  cmd.rs  login_menu.rs  main_menu.rs  print.rs
src/menu/cmd/: add_income.rs  balance.rs  close.rs  close_account.rs  create_account.rs  do_transfer.rs  exit.rs  login.rs
