[package]
name = "rust-bank"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Łosiniecki"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.144", features = ["derive"] }
error-stack = "0.1.1"
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
# panic = "abort"
